--- a/css/header.css
+++ b/css/header.css
@@ -2,9 +2,23 @@
 header{
     display: flex;
     justify-content: space-between;
-    padding:1rem;
+    padding:1rem 1.5rem;
+    box-shadow: 2px 2px 5px rgb(0,0,0,0.2);
+    position: fixed;
+    left: 345px;
+    width:calc(100% - 345px);
+    top: 0;
+    z-index: 100;
+    transition: width 300ms;
+    background: #fff;
 }
-
+header h2{
+    color: #222;
+}
+header label span{
+    font-size: 1.7rem;
+    padding-right: 1rem;
+}
 .search-wrapper{
     border: 1px solid #ccc;
     border-radius: 30px;
@@ -33,4 +47,9 @@ header{
 .user-wrapper img{
     border-radius: 50%;
     margin-right: 1rem;
+}
+.user-wrapper small{
+    display: inline-block;
+    color: var(--text-gray);
+    
 }
